[package]
name = "day22"
version = "0.1.0"
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyed_priority_queue = "0.3.1"
rustc-hash = "1.1.0"
array_iterator = "1.2.0"
